examples/type_system/failing/118_let_missing_eq.flx
fn main() -> Unit {
    let x 1
}
